# quirk

./: CMakeLists.txt  README.md  coverage.json
.github/workflows/: ci.yml  nightly.yml  release.yml
Source/: KnobDesign.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ADSREnvelope.h  AnimationEngine.cpp  AnimationEngine.h  BezierCurve.cpp  BezierCurve.h  Oscillator.cpp  Oscillator.h  VoiceAllocator.h
Tests/: TestADSREnvelope.cpp  TestAnimationEngine.cpp  TestBezierCurve.cpp  TestPolyVoices.cpp
Tools/: Screenshot.cpp
